# indexer-cli

./: ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.md  CHANGELOG.md  CODE_CHANGES_DETAILED.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  GOOGLE_AUTH_COMPLETE_REPORT.md  GOOGLE_AUTH_FIX.md  GOOGLE_AUTH_TROUBLESHOOTING.md  IMPROVEMENT_REPORT.md  QUICK_REFERENCE.md  README.md  README_CN.md  README_zh.md  SUBMISSION_REPORT_test-ipv6.run.md  TECHNICAL_RECOMMENDATIONS.md  TEST_RUN_REPORT.md  indexer.yaml  indexer.yaml.backup  indexer.yaml.example
doc/: indexer-cli-requirements.md
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GOOGLE_AUTH_QUICK_FIX.md  GOOGLE_SERVICE_ACCOUNT_TROUBLESHOOTING.md  GOOGLE_SETUP.md  INDEXNOW_SETUP.md  TROUBLESHOOTING.md  USAGE.md  google-oauth-setup.md  google-service-account-troubleshooting.md
examples/: README.md  basic_usage.rs
src/: constants.rs  lib.rs  main.rs
src/api/: google_indexing.rs  indexnow.rs  mod.rs
src/auth/: mod.rs  oauth.rs  token_store.rs
src/cli/: args.rs  handler.rs  mod.rs
src/commands/: config.rs  google.rs  history.rs  indexnow.rs  init.rs  mod.rs  sitemap.rs  submit.rs  validate.rs  watch.rs
src/config/: loader.rs  mod.rs  settings.rs  validation.rs
src/database/: mod.rs  models.rs  queries.rs  schema.rs
src/services/: batch_submitter.rs  history_manager.rs  mod.rs  sitemap_parser.rs  url_processor.rs
src/types/: error.rs  mod.rs  result.rs
src/utils/: file.rs  logger.rs  mod.rs  retry.rs  validators.rs
tests/: api_tests.rs
tests/fixtures/: mod.rs
~/.indexer-cli/: history.db
